# To-Do_Qt_App

./: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  README.md  main.cpp
assets/: resources.qrc
assets/styles/: login.qss
ui/homePage/: HomePage.cpp  HomePage.hpp
ui/loginPage/: LoginPage.cpp  LoginPage.hpp
